# valmiki_ramayanam

./: .gitignore  .prettierignore  .prettierrc  LICENSE  README.md  Technical_Details.md  _redirects  devcontainer.json  drizzle.config.ts  helper_cli  helper_cli.py  netlify.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  svelte.config.js  tailwind.config.ts  trigger.config.ts  tsconfig.json  vite.config.ts
.devcontainer/: devcontainer.json
.github/workflows/: app_checks.yml  backup.yml  checks.yml  commit_trans.yml  ramayan_ci.yml  type_svelte_checks.yml
data/: get_raw_data.py
data/ramayan/: Manual_Changes.md  README.md  common.py  get_json.py  get_raw_data.py  get_sarga_json.py  get_text.py  make_excel_files.ts  numbers.yaml  organize_translation_folder.ts  ramayan_map.json  requirements.txt  run_tests.py
image_tool/: package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
image_tool/src/: App.tsx  main.tsx
kAraH/: anukAraH.py  converts.xlsx  mukhya.py
kAraH/dattAMsh/: Bengali.py  Brahmi.py  Granth.py  Gujarati.py  Kannada.py  Malayalam.py  Modi.py  Odia.py  Punjabi.py  Purna_Devanagari.py  Romanized.py  Sanskrit.py  Sharada.py  Siddham.py  Sinhala.py  Tamil.py  Tamil_Extended.py  Telugu.py  Urdu.py  __init__.py
others/: test_file
others/scripts/: extract_map_from_excel.ts
src/: app.css  app.d.ts  app.html  app.pcss  app.scss  converter.js  hooks.server.ts  load_xlsx.ts
src/api/: client.ts  context.ts  pure_client.ts  (+3 more)
static/: manifest.json  robots.txt  sitemap.xml
tests/: convert.test.ts
(+2379 files in other folders)
