[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
toml = "^0.10.2"
pydantic = "^2.7.4"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
shubhlipi = "^0.0.0.181"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
